# ai-roleplay-system

./: .env.example  .gitignore  debug.py  main_stage1.py  main_stage2.py  main_stage3.py  main_stage4.py  main_stage4_fast.py  main_stage4_test.py  main_stage4_ultra_fast.py  populate_kb.py  pyproject.toml  requirements.txt  run_with_debug.py  test_all_channels.py  test_audio_channels.py  test_channels.py  test_rag_system.py
config/: agents.toml  audio.toml  main.toml  performance.toml  schedule.toml
docs/: optimization_guide.md  remote_vector_setup.md
scripts/: add_documents.py  batch_process_documents.py  distributed_rag.py  export_vector_db.py  ingest_documents.py  parse_to_chroma.py  quick_rag_test.py  reset_vectordb.py  test_rag.py
src/: multi_agent_manager.py  orchestrated_agent_manager.py  orchestrated_agent_manager_cached.py  rag_enhanced_agent.py  rag_multi_agent_manager.py  single_agent.py
src/ai_roleplay_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/knowledge/: document_processor.py  rag.py
transcripts/: conversation_20250808_102001.md  conversation_20250808_115209.md  conversation_cached_20250808_120230.md  conversation_cached_20250808_120303.md  conversation_cached_20250808_120324.md  orchestrator_20250808_101907.md  orchestrator_20250808_102001.md  orchestrator_20250808_114303.md  orchestrator_20250808_114646.md  orchestrator_20250808_115209.md  orchestrator_20250808_115222.md  orchestrator_20250808_120029.md  orchestrator_20250808_120230.md  orchestrator_20250808_120303.md  orchestrator_20250808_120323.md
(+13 files in other folders)
